k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratelimit-service
spec:
  ports:
    - port: 4000
      targetPort: api-port
      protocol: TCP
      name: api-port
  selector:
    app: ratelimit
  type: NodePort
  externalTrafficPolicy: Local
