k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  annotations:
    kubernetes.io/ingress.global-static-ip-name: k8s # 35.190.20.50	
    kubernetes.io/ingress.class: "gce"
    ingress.kubernetes.io/tls-minimum-version: "1.1"
spec:
  tls:
    - hosts:
        - api.hoyoyo.xyz
      secretName: ssl-secret
  rules:
    - host: api.hoyoyo.xyz
      http:
        paths:
          - backend:
              serviceName: ratelimit-service
              servicePort: api-port
            path: /*
